--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -7,3 +7,6 @@ project(':capacitor-camera').projectDir = new File('../node_modules/@capacitor/c
 
 include ':capacitor-live-updates'
 project(':capacitor-live-updates').projectDir = new File('../node_modules/@capacitor/live-updates/android')
+
+include ':revenuecat-purchases-capacitor'
+project(':revenuecat-purchases-capacitor').projectDir = new File('../node_modules/@revenuecat/purchases-capacitor/android')
