fix: injetando correção de assinatura no fluxo de build do Appflow

--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "build:dev": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext swift,js,ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
-    "fix-signing": "node fix-signing.cjs",
-    "capacitor:sync:after": "npm run fix-signing"
+    "build": "tsc && vite build && node fix-signing.cjs",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@capacitor/android": "^8.1.0",
