chore: migrando para CocoaPods para resolver conflito de assinatura no Appflow

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -28,6 +28,9 @@
 			"maxVersions": 3
 		}
 	},
+	"hooks": {
+		"cap-sync-after": "node fix-signing.cjs"
+	},
 	"packageClassList": [
 		"CAPCameraPlugin",
 		"CAPLiveUpdatesPlugin",
