--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,16 +1,11 @@
-# Caminho para os scripts do Capacitor
-require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
-
 platform :ios, '13.0'
 
 target 'App' do
-  # Tenta carregar as pods do Capacitor de forma segura
-  begin
-    capacitor_pods
-  rescue => e
-    puts "Aviso: Não foi possível carregar capacitor_pods automaticamente: #{e.message}"
-  end
+  use_frameworks!
 
-  # Adicionando o RevenueCat explicitamente
+  # Adicionando o RevenueCat diretamente via CocoaPods
   pod 'RevenueCat', '5.59.2'
+  
+  # Se você usa outros plugins do Capacitor que precisam de Pods, 
+  # eles seriam listados aqui, mas o RevenueCat é o nosso foco principal.
 end
