--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,11 +1,29 @@
 platform :ios, '13.0'
+use_frameworks!
 
 target 'App' do
-  use_frameworks!
-
-  # Adicionando o RevenueCat diretamente via CocoaPods
+  # Adicionando o RevenueCat via CocoaPods
   pod 'RevenueCat', '5.59.2'
-  
-  # Se você usa outros plugins do Capacitor que precisam de Pods, 
-  # eles seriam listados aqui, mas o RevenueCat é o nosso foco principal.
+end
+
+# BLOCO DE CORREÇÃO DE ASSINATURA (Sintaxe correta para o CocoaPods)
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      # 1. Força o Team ID em todas as dependências
+      config.build_settings['DEVELOPMENT_TEAM'] = 'CASJQDDA7L'
+      
+      # 2. Desabilita a assinatura automática para evitar o conflito
+      config.build_settings['CODE_SIGN_STYLE'] = 'Manual'
+      
+      # 3. Define a identidade de assinatura para Distribuição
+      config.build_settings['CODE_SIGN_IDENTITY'] = 'Apple Distribution'
+      
+      # 4. Garante a herança de configurações para evitar avisos de biblioteca
+      config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = '$(inherited)'
+      
+      # 5. Desabilita Bitcode para evitar erros de compilação
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+    end
+  end
 end
