fix: Podfile definitivo com hooks pre_install e post_install corrigidos

--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,29 +1,37 @@
+# Plataforma e uso de frameworks
 platform :ios, '13.0'
 use_frameworks!
 
+# Hook para ser executado ANTES da instalação dos Pods
+pre_install do |installer|
+  # Garante que as dependências do Capacitor sejam carregadas
+  require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
+  capacitor_pods
+end
+
 target 'App' do
-  # Adicionando o RevenueCat via CocoaPods
+  # Adiciona o RevenueCat via CocoaPods
   pod 'RevenueCat', '5.59.2'
 end
 
-# BLOCO DE CORREÇÃO DE ASSINATURA (Sintaxe correta para o CocoaPods)
+# Hook para ser executado DEPOIS da instalação dos Pods
 post_install do |installer|
+  # Itera sobre cada dependência (target) do projeto de Pods
   installer.pods_project.targets.each do |target|
+    # Itera sobre cada configuração de build (Debug, Release, etc.)
     target.build_configurations.each do |config|
-      # 1. Força o Team ID em todas as dependências
+      # 1. Força o Team ID em TODAS as dependências para unificar a assinatura
       config.build_settings['DEVELOPMENT_TEAM'] = 'CASJQDDA7L'
       
-      # 2. Desabilita a assinatura automática para evitar o conflito
+      # 2. Desabilita a assinatura automática em TODAS as dependências (A CAUSA DO ERRO ORIGINAL)
       config.build_settings['CODE_SIGN_STYLE'] = 'Manual'
       
-      # 3. Define a identidade de assinatura para Distribuição
+      # 3. Define a identidade de assinatura para Distribuição em TODAS as dependências
       config.build_settings['CODE_SIGN_IDENTITY'] = 'Apple Distribution'
       
-      # 4. Garante a herança de configurações para evitar avisos de biblioteca
-      config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = '$(inherited)'
-      
-      # 5. Desabilita Bitcode para evitar erros de compilação
-      config.build_settings['ENABLE_BITCODE'] = 'NO'
+      # 4. Define o Provisioning Profile para TODAS as dependências
+      config.build_settings['PROVISIONING_PROFILE_SPECIFIER'] = 'BibliaToonKIDS_AppStore_Final'
     end
   end
 end
+
