--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -2,10 +2,20 @@
 platform :ios, '13.0'
 use_frameworks!
 
+# Função capacitor_pods embutida para garantir que esteja sempre disponível
+def capacitor_pods
+  # Adiciona os pods essenciais do Capacitor
+  pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
+  pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
+  pod 'CapacitorApp', :path => '../../node_modules/@capacitor/app'
+  pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
+  pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
+  pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
+end
+
 # Hook para ser executado ANTES da instalação dos Pods
 pre_install do |installer|
-  # Garante que as dependências do Capacitor sejam carregadas
-  require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
+  # Chama a função capacitor_pods que acabamos de definir
   capacitor_pods
 end
 
@@ -31,7 +41,14 @@ post_install do |installer|
       
       # 4. Define o Provisioning Profile para TODAS as dependências
       config.build_settings['PROVISIONING_PROFILE_SPECIFIER'] = 'BibliaToonKIDS_AppStore_Final'
+      
+      # 5. Garante a herança de configurações para evitar avisos de biblioteca
+      config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = '$(inherited)'
+      
+      # 6. Desabilita Bitcode para evitar erros de compilação
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
     end
   end
 end
+
 
