--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -24,31 +24,17 @@ target 'App' do
   pod 'RevenueCat', '5.59.2'
 end
 
-# Hook para ser executado DEPOIS da instalação dos Pods
+# BLOCO DE CORREÇÃO DE ASSINATURA (AGORA SIMPLIFICADO PARA OS PODS)
 post_install do |installer|
-  # Itera sobre cada dependência (target) do projeto de Pods
   installer.pods_project.targets.each do |target|
-    # Itera sobre cada configuração de build (Debug, Release, etc.)
     target.build_configurations.each do |config|
-      # 1. Força o Team ID em TODAS as dependências para unificar a assinatura
-      config.build_settings['DEVELOPMENT_TEAM'] = 'CASJQDDA7L'
-      
-      # 2. Desabilita a assinatura automática em TODAS as dependências (A CAUSA DO ERRO ORIGINAL)
-      config.build_settings['CODE_SIGN_STYLE'] = 'Manual'
-      
-      # 3. Define a identidade de assinatura para Distribuição em TODAS as dependências
-      config.build_settings['CODE_SIGN_IDENTITY'] = 'Apple Distribution'
-      
-      # 4. Define o Provisioning Profile para TODAS as dependências
-      config.build_settings['PROVISIONING_PROFILE_SPECIFIER'] = 'BibliaToonKIDS_AppStore_Final'
-      
-      # 5. Garante a herança de configurações para evitar avisos de biblioteca
       config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = '$(inherited)'
-      
-      # 6. Desabilita Bitcode para evitar erros de compilação
       config.build_settings['ENABLE_BITCODE'] = 'NO'
+      # REMOVIDO: CODE_SIGN_IDENTITY, CODE_SIGN_STYLE, PROVISIONING_PROFILE_SPECIFIER e DEVELOPMENT_TEAM
+      # Pods/frameworks não devem ter signing manual
     end
   end
 end
+
 
 
